tests/testcrate/tests/ui/select_fk.stderr
warning: No primary key found
  --> $DIR/select_fk.rs:43:8
   |
43 | struct RelatedTable {
   |        ^^^^^^^^^^^^

error: No primary key found for table RelatedTable which is needed for a join
  --> $DIR/select_fk.rs:43:8
   |
43 | struct RelatedTable {
   |        ^^^^^^^^^^^^
...
48 |     sql!(Table.all().join(related));
   |                           ------- in this macro invocation

error: aborting due to previous error

